// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option renders a default multi-select state 1`] = `
<div>
  <div
    aria-checked="false"
    class="fui-Option"
    id="fluent-option1"
    role="menuitemcheckbox"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    />
    Default Option
  </div>
</div>
`;

exports[`Option renders a default single-select state 1`] = `
<div>
  <div
    aria-selected="false"
    class="fui-Option"
    id="fluent-option1"
    role="option"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;

exports[`Option renders a selected multi-select state 1`] = `
<div>
  <div
    aria-checked="true"
    class="fui-Option"
    id="fluent-option1"
    role="menuitemcheckbox"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;
